<resources>
    <string name="app_name">App Portfolio</string>
    <string name="header_title">My Nanodegree Apps</string>
    <string name="popular_movies">popular movies</string>
    <string name="stock_hawk">stock hawk</string>
    <string name="build_it_bigger">build it bigger</string>
    <string name="make_your_app_material">make your app material</string>
    <string name="go_ubiquitous">go ubiquitous</string>
    <string name="capstone_my_own_app">capstone: my own app</string>
</resources>
